# massa-rust-sc-sdk

./: Cargo.toml  README.md  build.rs
src/: allocator.rs  lib.rs
src/abi/proto/: mod.rs
src/abis/: abort.rs  call.rs  create_sc.rs  echo.rs  generate_event.rs  log.rs  mod.rs  native_address.rs  native_amount.rs  transfer_coins.rs
