[package]
name = "massa_rust_sc_sdk"
version = "0.1.0"
edition = "2021"
# It seems we can drop this section, if so, the default rlib is used
# [lib]
# crate-type = ["cdylib", "rlib"]

[dependencies]
dlmalloc = { version = "0.2.4", features = ["global"] }
log = "0.4.14"
massa_proto = { path = "../massa-proto", features = ["prost-build"] }
prost = { version = "0.11.8", default-features = false, features = [
    "prost-derive",
] } # specify the exact version to ensure determinism
prost-types = { version = "0.11.8", default-features = false }

[build-dependencies]
glob = "0.3.1"
prost-build = "0.11.8" # specify exact version to ensure determinism

[dev-dependencies]
log = "0.4.14"

[features]
prost-build = []
testing = []

[profile.release]
lto = true
opt-level = "z"
strip = true
#debug = true
#strip = "debuginfo"
#strip = true

[profile.dev]
lto = true
opt-level = "z"
strip = true
